# lectures

./: .gitignore  README.md
01-240906/: CMakeLists.txt  TODO.md
01-240906/01-org/: 01-org.md  02-rules.md  03-materials.md
01-240906/02-standards/: 01-zoo.md
01-240906/03-basic/: 00-links.md  03-a-plus-b.cpp  05-global-vars-scopes.cpp  07-using-namespace-bad.cpp  08-compilers-differ.cpp  09-bits-stdcpp.cpp
01-240906/05-hw/: 01-demo.md
02-240913/: CMakeLists.txt
02-240913/01-basic-arithmetics/: 01-int.cpp  02-int-overflow-ub.cpp  03-long-long-conversions.cpp  04-bool.cpp  11-increment.cpp
02-240913/02-branching/: 01-if.cpp  02-logical.cpp  03-for.cpp  04-while.cpp
02-240913/03-static-analysis/01-clang-tidy/: 01-warnings.cpp  02-nolint-bad.cpp  03-nolint-good.cpp  04-nolintnextline.cpp  05-nolintnextline-multiple.cpp
02-240913/03-static-analysis/02-cppcheck/: 01-warnings.cpp  02-suppress-bad.cpp  03-suppress-good.cpp  04-suppress-next-line.cpp  05-suppress-multiple.cpp
02-240913/03-static-analysis/03-compiler-warning/: 01-warnings.cpp
03-240920/: 00-assert.cpp  TODO.md  progress.md
03-240920/01-enum-switch/: 01-simple.cpp  02-extract-function.cpp  03-add-constants.cpp  04-enum-class.cpp  05-switch.cpp  10-switch-default.cpp  11-switch-no-string.cpp  12-switch-fallthrough.cpp  13-switch-init.cpp
03-240920/02-language/: 02-ternary-operator.cpp  03-auto.cpp  10-using-typedef.cpp  11-define-bad.cpp  12-maybe-unused.cpp
03-240920/03-arrays/: 01-array.cpp  02-for-ref.cpp  03-vector-emplace.cpp  04-vector-structured-binding.cpp  05-vector-resize.cpp
03-240920/04-strings/: 01-char.cpp  02-char-vector-wtf.cpp  10-string.cpp  12-to-string.cpp  20-stringstream.cpp  30-encodings.01.in  30-encodings.02.in  30-encodings.03.in  30-encodings.04.in
03-240920/06-functions/: 05-const-ref-fast.cpp
04-240925/01-advanced-arithmetics/: 01-unsigned.cpp  03-array-for-unsigned-error.cpp  04-char-signed.cpp  10-literals.cpp  20-division.cpp
04-240925/02-functions/: 10-ref.cpp  12-nodiscard.cpp
04-240925/03-struct/: 01-struct.cpp  02-aggregates.cpp  03-const.cpp  10-member-default-initialization.cpp  11-member-default-initialization-vector.cpp
04-240925/10-containers/: 01-set.cpp  02-iterators.cpp
05-241003/01-struct-advanced/: 01-this-and-arrow.cpp  02-static-cast-vs-const.cpp  03-initialization.cpp  10-constructors-bad-style.cpp  11-member-initialization-list.cpp  12-delegating-constructor.cpp  20-public.cpp  21-private.cpp  30-static.cpp  30b-static-on-instance.cpp  31-friend-function.cpp  32-friend-class.cpp
05-241003/02-conversions/: 01-implicit-conversion.cpp  02-explicit-bad.cpp  03-explicit-bad-fix.cpp  (+4 more)
13-241212/: CMakeLists.txt
13-241212/00-no-naive-threading/: 01-optimizer.cpp  02-reordering.cpp  03-volatile-bad.cpp  10-still-bad-toctou.cpp  README.md
13-241212/01-operator-bool/: 01-operator-bool-usage.cpp  02-operator-implicit.cpp  03-operator-explicit.cpp
13-241212/03-old-c/: 04-const-cast.cpp
13-241212/04-rtti/: 01-typeid-basic.cpp  02-typeid-operations.cpp  03-dynamic-cast.cpp
13-241212/05-inheritance-extra/: 02-pure-virtual-ctors.cpp  10-circle-ellipse.cpp
13-241212/10-basics-extra/: 01-floating.cpp  02-floating-ops.cpp  03-floating-bad.cpp  10-order-of-eval.cpp  13-short-circuit.cpp  20-vector-bool.cpp
common/: TODO.md  macos.md  materials.md  software.md  ubuntu.md  windows.md
questions-a/: README.md
questions-b/: README.md
(+417 files in other folders)
